--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 PokeDex.xcodeproj/xcuserdata/ashleemuscroft.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 PokeDex.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
+.DS_Store
+/PokeDex.xcodeproj/project.xcworkspace/xcuserdata
